logic的录入与取出，并解析结构
