# swagger/swagger.yml
@@ -2,7 +2,7 @@ swagger: "2.0"
 info:
   title: beego Test API
   description: beego has a very cool tools to autogenerate documents for your API
-  version: 1.0.1
+  version: 1.0.0
   termsOfService: http://beego.me/
   contact:
     email: astaxie@gmail.com
@@ -34,6 +34,17 @@ paths:
       - build
       description: 构建服务所有form源码
       operationId: BuildController.BuildForms
+      responses:
+        "200":
+          description: 编译成功
+        "403":
+          description: body is empty
+  /build/buildLogic:
+    post:
+      tags:
+      - build
+      description: 构建逻辑
+      operationId: BuildController.BuildLogic
       responses:
         "200":
           description: 编译成功
@@ -538,12 +549,51 @@ paths:
           description: 编译成功
         "403":
           description: body is empty
+  /logic/create:
+    post:
+      tags:
+      - logic
+      description: 创建
+      operationId: LogicController.Create
+      responses:
+        "200":
+          description: 编译成功
+        "403":
+          description: body is empty
   /logic/getDemo:
     post:
       tags:
       - logic
       description: 获取示例
       operationId: LogicController.GetDemo
+      parameters:
+      - in: string
+        name: name
+        description: 表单名称
+        schema:
+          $ref: '#/definitions/true'
+      responses:
+        "200":
+          description: 编译成功
+        "403":
+          description: body is empty
+  /logic/getDetail:
+    post:
+      tags:
+      - logic
+      description: 查询详情
+      operationId: LogicController.GetDetail
+      responses:
+        "200":
+          description: 编译成功
+        "403":
+          description: body is empty
+  /logic/getMany:
+    post:
+      tags:
+      - logic
+      description: 查询多个
+      operationId: LogicController.GetMany
       parameters:
       - in: string
         name: name
